Fix app title width on mobile

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -379,3 +379,7 @@ cursor {
 .infinite-scroll-height {
   max-height: 100vh;
 }
+
+.au-c-main-header__title {
+  max-width: 100% !important;
+}
